<resources>
    <string name="app_name">LocaLim</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="or">OR</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="location">Location :</string>
    <string name="upload_a_picture">Upload a picture :</string>
    <string name="cancel">Cancel</string>
    <string name="hint_locaotion">Enter an address </string>
    <string name="modify">Modify</string>
    <string name="ajoutez_une_offre">Ajoutez une offre</string>
    <string name="reset_password">Reset password</string>
    <string name="e_mail">E-mail</string>
    <string name="send_password_reset_link">Send password reset link :</string>
    <string name="localim">LocaLim</string>
    <string name="sign_in">Sign In :</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="create_an_account">Create an account :</string>


</resources>