<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#FFF">
    <TextView
            android:text="@string/localim"
            android:layout_width="158dp"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:textColor="@color/colorPrimary"
            android:textSize="36sp" android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:fontFamily="casual"/>
    <TextView
            android:text="@string/create_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:textSize="24sp" android:textStyle="bold" android:textColor="@color/colorBoutons"
            android:fontFamily="sans-serif-condensed-light"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/e_mail"
            android:id="@+id/mail" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:hint="@string/password" />
    <Button
            android:text="@string/register"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textColor="#FFFF"
            android:id="@+id/register"
            android:background="@color/colorBoutons"/>
    <Button
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/login"
            android:background="@null"
            android:textColor="@color/colorBoutons"
            android:layout_marginBottom="10dp"/>

</LinearLayout>