<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#FFF">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:text="@string/send_password_reset_link"
            android:textSize="24sp" android:fontFamily="sans-serif-condensed-medium" android:textStyle="bold"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:hint="@string/e_mail"
            android:id="@+id/textEmailAddress"/>
    <Button
            android:text="@string/reset_password"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textColor="#FFFF"
            android:id="@+id/resetPassword"
            android:background="@color/colorBoutons"/>
</LinearLayout>