<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        tools:context=".ModifyOffreActivity">
    <EditText android:layout_width="match_parent" android:layout_height="45dp"
              android:id="@id/title"
              android:layout_marginEnd="16dp"
              android:maxLines="1"
              android:inputType="text"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
              android:layout_marginTop="4dp" android:textSize="24sp"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/description"
              android:adjustViewBounds="true"
              android:maxWidth="50dp"
              android:maxHeight="50dp"
              android:layout_marginEnd="16dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
              android:layout_marginTop="4dp" android:textSize="12sp"/>
    <EditText android:layout_width="match_parent" android:layout_height="45dp"
              android:id="@+id/location"
              android:layout_marginEnd="16dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp"
              app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView7"
              android:layout_marginTop="4dp" android:hint="@string/hint_locaotion"/>
    <Button
            android:text="@string/add"
            android:onClick="modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginEnd="16dp"
            android:background="@color/colorBoutons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="1dp" app:layout_constraintStart_toEndOf="@+id/button4"/>
    <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@xml/button_shape"
            android:onClick="choisirFic"
            android:elevation="18dp"
            android:src="@mipmap/upload48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textView9"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp" android:id="@+id/textView9"/>
    <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@xml/button_shape"
            android:onClick="prendrePhoto"
            android:elevation="18dp"
            android:src="@mipmap/camera" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="24dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/textView9"/>
    <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/imageImporte"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:maxWidth="130dp"
            android:maxHeight="110dp"
            android:background="@drawable/imageborder"
            android:fadingEdge="horizontal|vertical"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/description"/>
    <TextView
            android:text="@string/upload_a_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/location"/>
    <Button
            android:text="@string/cancel"
            android:onClick="cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            android:background="@color/colorBoutons"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button" android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/modifyTextView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp" android:textSize="18sp"
            android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>